# opensos

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  devenv.nix  vcpkg.json
assets/base_data/: ai_profiles.json  balance.json  biomes.json  buildings.json  cities.json  combat_stats.json  countries.json  diplomacy.json  ideologies.json  leader_names.json  regions.json  resources.json  world_regions.json
assets/img/: script.py
include/core/: app.h  audio.h  common.h  engine.h  input.h  settings.h
include/data/: country_data.h  data_loader.h  json.hpp  region_data.h
include/dev/: command_registry.h  dev_console.h
include/game/: ai.h  battle.h  buildings.h  combat.h  country.h  division.h  economy.h  effect_system.h  event_manager.h  faction.h  focus_tree.h  fog_of_war.h  game_state.h  helpers.h  pathfinding.h  peace_conference.h  political_options.h  politics.h  puppet.h
include/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
include/map/: map_functions.h  map_manager.h  map_renderer.h
include/save/: save_system.h
include/screens/: country_select.h  decision_tree.h  game_screen.h  main_menu.h  map_select.h  peace_screen.h  save_load.h  screen.h  settings_screen.h
include/sidebar/: sidebar.h
include/ui/: button.h  click_registry.h  imgui_integration.h  panel.h  popup.h  primitives.h  rmlui_backend.h  tabbed_panel.h  text_cache.h  theme.h  toast.h  tooltip.h  top_bar.h  ui_assets.h  ui_manager.h  widget.h
resources/: windows_app.rc
src/: main.cpp
src/core/: app.cpp  audio.cpp  engine.cpp  input.cpp  settings.cpp
src/data/: country_data.cpp  data_loader.cpp  region_data.cpp
src/dev/: command_registry.cpp  dev_console.cpp
(+91 files in other folders)
